# pentachoron

./: .gitignore  CMacros.cmake  CMakeLists.txt  INSTALL  LICENSE  README  TODO.txt  app.conf  conf-and-build.sh  local.conf.example
android/: AndroidManifest.xml
android/res/values/: themes.xml
android/src/com/albertusoft/pentachoron/: MainActivity.java
android/src/com/cortexview/pentachoron/: MainActivity.java
cmake/Android/: AndroidToolchain.cmake  QtAndroid.cmake  QtAndroid_BuildAPK.cmake.in
cmake/Modules/: cp.cmake
cmake/iOS/: iOS.cmake
resources/doc/: .~lock.help.html#  BSD2.txt  help.html  qt-5.9-lgpl.html
resources/icons/: pentachoron.icns
scripts/: build-for-android.sh  build-for-win32.bat  configure-for-android.sh  configure-for-ios.sh  configure-for-linux.sh  configure-for-macos.sh  configure-for-win32.bat  local.conf.example
scripts/templatefiles/: config.xml  installscript.qs  package.xml
src/: CoordinateSystem.qml  CylinderEntity.qml  DefaultNumberAnimation.qml  EmittingMaterial.qml  FullDial.qml  HelpScreen.qml  LicenseScreen.qml  MainScreen.qml  PentachoronEntity.qml  Rotate4DMat.qml  SphereEntity.qml  StyledCheckBox.qml  StyledComboBox.qml  StyledTabButton.qml  Utils.cpp  Utils.h  pentachoron.qrc  pentachoron.rc  pentachoron_main.cpp  pentachoron_main.qml
